[package]
name = "dmc"
version = "2.0.0"
edition = "2024"

[dependencies]

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = [
    "json",
    "cookies",
    "multipart",
    "rustls-tls"
] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
url = "2"
clap = { version = "4", features = ["derive"] }
regex = "1"
jsonpath_lib = "0.3"
